--- a/style.css
+++ b/style.css
@@ -230,6 +230,8 @@ main {
   border: none;
   padding: 0;
   background: transparent;
+  min-height: auto;
+  place-items: stretch;
 }
 
 .photo--image img {
